// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginMessage component, with a button, matches the snapshot 1`] = `
.c5 {
  height: 48px;
  margin: 0;
  padding: 0 16px;
  border: 0;
  background-color: #64a60a;
  color: #fff;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  -webkit-filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  filter: drop-shadow(0 2px 4px rgb(0,0,0,0.2));
  border-radius: 4px;
  font: 700 14px/24px "Open Sans",sans-serif;
  cursor: pointer;
  vertical-align: top;
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c5:hover,
.c5:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c5:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c4 {
  text-shadow: 0px 0px 2px #000;
}

.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  font-size: 1.5em;
  margin: 0.8333em;
}

<div
  className="c0"
>
  <img
    alt="MyYoast - Yoast Academy"
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    alt=""
    className="c2"
    src="greeting.png"
  />
  <h1
    className="c3"
  >
    <span>
      Password changed successfully!
    </span>
  </h1>
  <button
    className="c4 c5"
    onClick={[Function]}
    type="button"
  >
    <span>
      Continue to MyYoast
    </span>
  </button>
</div>
`;

exports[`The LoginMessage component, with a paragraph, matches the snapshot 1`] = `
.c0 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c2 {
  margin-top: 20px;
  width: 200px;
}

.c1 {
  margin-top: 40px;
  width: 360px;
}

.c3 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c4 {
  padding: 0 2em;
}

<div
  className="c0"
>
  <img
    alt="MyYoast - Yoast Academy"
    className="c1"
    src="my-yoast-academy-logo.svg"
  />
  <img
    alt=""
    className="c2"
    src="greeting.png"
  />
  <h1
    className="c3"
  >
    <span>
      Welcome back!
    </span>
  </h1>
  <p
    className="c4"
  >
    <span>
      Log in with your email address and password. If you don't remember your password, just reset it!
    </span>
  </p>
</div>
`;
